--- a/home/index.html
+++ b/home/index.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour | The Weeknd</title>
-    <link rel="stylesheet" href="home.css">
+    <title>Car Web App - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>The Weeknd</h1>
+        <h1>Welcome to the Car Showcase</h1>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tour</a></li>
-                <li><a href="#">Shop</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="models.html">Car Models</a>
         </nav>
     </header>
-    <section class="product">
-        <img src="d:\theweeknd\images.jpg" alt="Classic HUT Vynyl Record">
-        <div class="product-info">
-            <h2>ClassIC HUT Vynyl Record</h2>
-            <p>$39.99</p>
-            <a href="shop.html" class="button">Shop</a>
-        </div>
-    </section>
+    <main>
+        <h2>Explore the World of Cars</h2>
+        <p>Discover the latest car models and their features.</p>
+        <button onclick="showMessage()">Click for a Surprise</button>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
