--- a/home/shop.html
+++ b/home/shop.html
@@ -3,48 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link rel="stylesheet" href="shop.css">
+    <title>Car Web App - Models</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="about-container">
+    <header>
+        <h1>Car Models</h1>
         <nav>
-        <ul>
-        <section class="product">
-        <div class="product-info"></div>
-        <h1>Hurry Up Tomorrow (Complete Edition) 2LP</h1>
-        <p>$39.99</p>
-        <p>22 tracks</p>
-        <p>Tracklist:</p>
-        <p>
-            1. Wake Me Up 5:08
-            2. Cry For Me  3:44
-            3. I Can't Fucking Sing  0:12
-            4. São Paulo 5:01
-            5. Until We're Skin & Bones 0:22
-            6. Baptized In Fear 3:52
-            7. Open Hearts 3:54
-            8. Opening Night 1:36
-            9. Reflections Laughing 4:51
-            10. Enjoy The Show 5:01
-            11. Given Up On Me 5:54
-            12. I Can't Wait To Get There 3:08
-            13. Timeless  4:16
-            14. Niagara Falls  4:37
-            15. Take Me Back To LA 4:13
-            16. Big Sleep 3:45
-            17. Give Me Mercy 3:36
-            18. Drive 3:08
-            19. The Abyss 4:42
-            20. Red Terror 3:51
-            21. Without a Warning 4:57
-            22. Hurry Up Tomorrow 4:51
-        </p>
-        </ul>
-    </nav>
-    </div>
-</section>
-
-    <a href="home.html" class="back-button">Back to Home</a>
+            <a href="index.html">Home</a>
+            <a href="models.html">Car Models</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Popular Car Models</h2>
+        <div class="car">
+            <img src="/storage/emulated/0/Download/chevrolet-corvette-zr1-coupe-001.jpg" alt="Car 1">
+            <p>Sports Car - Fast and Stylish</p>
+        </div>
+        <div class="car">
+            <img src="/storage/emulated/0/Download/ford-xl-primary-6397e87fb5136.webp="Car 2">
+            <p>Luxury Sedan - Comfortable and Elegant</p>
+        </div>
+    </main>
 </body>
 </html>
